2014-01-06 11:02-EDT Adam Fedor <fedor@gnu.org>

	* Add preview image (provided by "a b")

2013-10-20 21:02-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GNUmakefile: Correct issue with image loading. Copy the theme
	images directory properly.

2013-01-16  Doug Simons  <doug.simons@testplant.com>

	* WinNSMenu.m: Fix rightMouseDisplay:forEvent: to work correctly when called
	from a modal panel before build_menu() has been called.

2012-09-04  Jonathan Gillaspie  <jonathan.gillaspie@testplant.com>

	* WinNSMenu.m: Display Key Equivalents on Menus with capital letters (Windows Standard) eg Ctrl+S (not s).

2012-02-26  German Arias  <german@xelalug.com>

	* WinNSMenu.m: Use AppendMenuW() to allow unicode characters.

2012-02-23  Jonathan Gillaspie  <jonathan.gillaspie@testplant.com>

	* WinNSMenu.m: Allow punctions and symbols in the key equivalent field.

2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* WinNSButton.m: Use new buttonMarginsForCell: API to return
	top/bottom/left/right margins

2010-12-20 Doug Simons <doug.simons@testplant.com>

	* WinNSMenu.m:
	Be sure to destroy the menu itself, or it will eventually crash.

2010-11-19 Doug Simons <doug.simons@testplant.com>

	* WinNSColorWell.m:
	Make border of NSColorWell smaller to more closely match Cocoa metrics. This makes a
	big difference in small color wells.

2010-11-19 Doug Simons <doug.simons@testplant.com>

	* WinNSMenu.m:
	Send actions for items in a popUp menu as well as in a pullDown.

2010-11-01 Jonathan Gillaspie <jonathan.gillaspie@testplant.com>>

	* Resources/ThemeImages/common_3DArrowUp.tif:
	Small change to make 3D Arrow consistent with other Windows UI controls.
	
2010-10-29 Doug Simons <doug.simons@testplant.com>

	* WinNSMenu.m:
	Implement new doesProcessEventsForPopUpMenu method. This fixes a
	problem with actions getting sent twice when using this theme.

2010-10-27 Doug Simons <doug.simons@testplant.com>

	* WinNSMenu.m:
	Implemented checkmarks on selected menu items.
