@@ -1,3 +1,10 @@
+2014-02-23 German Arias <germanandre@gmx.es>
+
+	* WinNSOpenPanel.m: Changes to allow panel "Open" showing one entry for
+	each kind of writable document, plus one entry to "All". Similar change
+	to panel "Save", so the user can save a document in other format.
+	Although this doesn't works actually, and will need an additional hack.
+
 2014-01-06 11:02-EDT Adam Fedor <fedor@gnu.org>
 
 	* Add preview image (provided by "a b")
